Pdf de una factura dentro de un modal

--- a/public/css/style-login.css
+++ b/public/css/style-login.css
@@ -293,3 +293,9 @@ input:-webkit-autofill:focus {
 .web-link-container a label{
 	cursor: pointer;
 }
+
+
+
+.invoices-modal .modal-dialog{
+	width: 900px;
+}
