--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -5,3 +5,19 @@ body {
     margin: auto; 
     background-color: $badass; 
 }
+
+
+//esto iria a un login.scss
+.login-container {
+    margin-top: 14%;
+}
+
+.login-error-message {
+	color: #d6756f;
+	padding: 10px 0px;
+}
+
+.dashboard-container {
+    position: relative;
+    top: 51px;
+}
